# interview

./: .gitignore  .npmrc  AGENTS.md  AI_USAGE.md  ARCHITECTURE.md  Makefile  README.md
backend/: database.py  logging_config.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
backend/agents/: __init__.py  analyzer.py  base.py  mobile_operator.py  reporter.py  web_operator.py
backend/database/: __init__.py  session.py
backend/migrations/: __init__.py  __main__.py  runner.py
backend/migrations/sql/: 0001_initial_schema.sql  0002_add_workflow_fields.sql
backend/models/: __init__.py  _enums.py  agent_run.py  alert.py  event_log.py  report.py  store.py  workflow.py
backend/orchestrator/: __init__.py  agent_runner.py  engine.py  event_emitter.py  state_machine.py
backend/routes/: __init__.py  alerts.py  dashboard.py  stores.py  workflows.py
backend/schemas/: __init__.py  agent.py  store.py  timeline.py  workflow.py
backend/service/: __init__.py  alert.py  dashboard.py  store.py  workflow.py
backend/stores/: __init__.py  agent_run.py  alert.py  event_log.py  report.py  store.py  workflow.py
conductor/: index.md  saas-ui-plan.md  store-detail-page-plan.md
doc/: README.md  STATE.md
doc/reference/: AI 编程机试.md  本地生活业务基础知识.md
doc/specs/: STORE-DETAIL-DESIGN.md
doc/superpowers/plans/: 2026-04-14-auto-state-transition-SUMMARY.md  2026-04-14-auto-state-transition-plan.md  (+8 more)
frontend/: .npmrc  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentRunsTable.tsx  AlertList.tsx  DashboardCharts.tsx  FailureLogCard.tsx  KPILineChart.tsx  StateBadge.tsx  StepDetailCard.tsx  StoreDetailModal.tsx  StoreDetailSkeleton.tsx  StoreInfoCard.tsx  StoreList.tsx  StoreTimeline.tsx  VerticalTimeline.tsx  WorkflowStatusBar.tsx  WorkflowStepper.tsx
frontend/lib/: api.ts  types.ts  utils.ts
mock_data/: competitors.json  reviews.json  stores.json
tests/: conftest.py  test_agent_run_store.py  test_agent_runner.py  test_auto_transition.py  test_event_emitter.py  test_example.py  test_orchestrator_engine.py  test_report_store.py  test_state_machine.py  test_workflow_store.py
(+3 files in other folders)
